# html-decorator

./: CMakeLists.txt  README.md  colors.h  cpp_highlighter.cpp  cpp_highlighter.h  html_escaper.cpp  html_escaper.h  html_wrapper.cpp  html_wrapper.h  ihtml_decorator.h  line_adder.cpp  line_adder.h  main.cpp  utils.cpp  utils.h
